main/default/objects/Development_Task__c/fields/Affected_Applications__c.field-meta.xml
<CustomField>
    <fullName>Affected_Applications__c</fullName>
    <label>Affected Application(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Capital Projects/iCert</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>CRW</fullName>
            </value>
            <value>
                <fullName>Enterprise Product Catalog (EPC)</fullName>
            </value>
            <value>
                <fullName>EPC/ICC/CCI</fullName>
            </value>
            <value>
                <fullName>iCare</fullName>
            </value>
            <value>
                <fullName>iLocate</fullName>
            </value>
            <value>
                <fullName>iRAC</fullName>
            </value>
            <value>
                <fullName>iSell</fullName>
            </value>
            <value>
                <fullName>Manual Sales Forms</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Pricing Lookup Tool</fullName>
            </value>
            <value>
                <fullName>Prospecting Tool</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Salesforce.com</fullName>
            </value>
            <value>
                <fullName>Sales Product Catalog (SPC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>