main/default/objects/Development_Task__c/fields/Deploy_List__c.field-meta.xml
<CustomField>
    <fullName>Deploy_List__c</fullName>
    <label>Deploy List</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>