main/default/objects/Development_Task__c/fields/Development_Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Development_Task_Description__c</fullName>
    <label>Development Task Description</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>