main/default/objects/Development_Task__c/fields/Development_Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Development_Task_Type__c</fullName>
    <label>Development Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business Process Development</fullName>
            </value>
            <value>
                <fullName>Programmatic Configuration</fullName>
            </value>
            <value>
                <fullName>Declarative Configuration</fullName>
            </value>
            <value>
                <fullName>Solution Design</fullName>
            </value>
            <value>
                <fullName>Data Management</fullName>
            </value>
            <value>
                <fullName>Training &amp; Documentation</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>