main/default/objects/Development_Task__c/fields/Hours_Actual__c.field-meta.xml
<CustomField>
    <fullName>Hours_Actual__c</fullName>
    <label>Hours - Actual</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>