main/default/objects/Development_Task__c/fields/Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Hours_Remaining__c</fullName>
    <label>Hours - Remaining</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>