main/default/objects/Development_Task__c/fields/Send_Assignment_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Assignment_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, an email notification will be sent out upon assignment of the Development Task</inlineHelpText>
    <label>Send Assignment Email</label>
    <type>Checkbox</type>
</CustomField>