main/default/objects/Development_Task__c/fields/Story_Owner__c.field-meta.xml
<CustomField>
    <fullName>Story_Owner__c</fullName>
    <formula>Story__r.Owner:Queue.QueueName &amp; 
Story__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Story__r.Owner:User.LastName</formula>
    <label>Story Owner</label>
    <type>Text</type>
</CustomField>