main/default/objects/Development_Task__c/fields/Story_Sprint__c.field-meta.xml
<CustomField>
    <fullName>Story_Sprint__c</fullName>
    <formula>Story__r.Sprint__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Story Sprint</label>
    <type>Text</type>
</CustomField>