main/default/objects/Development_Task__c/fields/Story_Summary__c.field-meta.xml
<CustomField>
    <fullName>Story_Summary__c</fullName>
    <formula>Story__r.Story_Summary__c</formula>
    <label>Story Summary</label>
    <type>Text</type>
</CustomField>