main/default/objects/Development_Task__c/listViews/Angie_Closed_Dev_Tasks.listView-meta.xml
<ListView>
    <fullName>Angie_Closed_Dev_Tasks</fullName>
    <columns>NAME</columns>
    <columns>Development_Task_Status__c</columns>
    <columns>Requested_Due_Date__c</columns>
    <columns>Affected_Applications__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Story_Owner__c</columns>
    <columns>Story_Summary__c</columns>
    <columns>Story_Priority__c</columns>
    <columns>Story__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned_To__c</field>
        <operation>equals</operation>
        <value>Angie Johnson</value>
    </filters>
    <filters>
        <field>Development_Task_Status__c</field>
        <operation>equals</operation>
        <value>Completed,Cancelled</value>
    </filters>
    <label>Angie Closed/Canceled Dev Tasks</label>
</ListView>